[package]
name = "kalshi"
version = "1.0.0"
authors = ["Niall Kehoe"]
edition = "2021"
description = """An HTTPS and Websocket wrapper that allows users to write 
trading bots for the Kalshi events trading platform.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/dpeachpeach/kalshi-rust"
keywords = ["finance", "trading", "kalshi", "bots"]
readme = "README.md"

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10"
base64 = "0.22"
serde_json = "1.0"
url = "2.4"
serde_urlencoded = "0.7"
progenitor-client = "0.13"
http = "1"

[build-dependencies]
progenitor = { version = "0.13", default-features = false }
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.9"
openapiv3 = "2.2"

[dev-dependencies]
serde_json = "1.0.111"
dotenv = "0.15"
tokio = { version = "1", features = ["full", "test-util"] }
